chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7099,3 +7099,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-20
+  taskId: 57760404
+  timeCreate: Thu Dec 21 22:23:18 2023
+  timeStart: Thu Dec 21 22:23:19 2023
+  timeFinish: Thu Dec 21 22:31:35 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-42
+  taskId: 57760472
+  timeCreate: Thu Dec 21 22:37:34 2023
+  timeStart: Thu Dec 21 22:37:53 2023
+  timeFinish: Thu Dec 21 22:41:26 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
