chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7135,3 +7135,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-operator
+  tag: 3.12-4
+  taskId: 57775301
+  timeCreate: Sat Dec 23 16:32:08 2023
+  timeStart: Sat Dec 23 16:32:49 2023
+  timeFinish: Sat Dec 23 16:49:09 2023
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 17 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-44
+  taskId: 57775346
+  timeCreate: Sat Dec 23 16:54:48 2023
+  timeStart: Sat Dec 23 16:54:57 2023
+  timeFinish: Sat Dec 23 16:58:06 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
