--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7153,3 +7153,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-22
+  taskId: 57775671
+  timeCreate: Sat Dec 23 22:23:34 2023
+  timeStart: Sat Dec 23 22:23:36 2023
+  timeFinish: Sat Dec 23 22:31:37 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-45
+  taskId: 57775692
+  timeCreate: Sat Dec 23 22:37:38 2023
+  timeStart: Sat Dec 23 22:38:11 2023
+  timeFinish: Sat Dec 23 22:41:18 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
