--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7306,3 +7306,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-24
+  taskId: 57778366
+  timeCreate: Sun Dec 24 22:23:11 2023
+  timeStart: Sun Dec 24 22:23:53 2023
+  timeFinish: Sun Dec 24 22:31:56 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-50
+  taskId: 57778387
+  timeCreate: Sun Dec 24 22:37:45 2023
+  timeStart: Sun Dec 24 22:38:26 2023
+  timeFinish: Sun Dec 24 22:41:44 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
