--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7324,3 +7324,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-25
+  taskId: 57782590
+  timeCreate: Mon Dec 25 22:28:57 2023
+  timeStart: Mon Dec 25 22:29:06 2023
+  timeFinish: Mon Dec 25 22:37:25 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-51
+  taskId: 57782620
+  timeCreate: Mon Dec 25 22:43:12 2023
+  timeStart: Mon Dec 25 22:43:40 2023
+  timeFinish: Mon Dec 25 22:47:12 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
