--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7360,3 +7360,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-10
+  taskId: 57788936
+  timeCreate: Wed Dec 27 15:55:24 2023
+  timeStart: Wed Dec 27 15:55:46 2023
+  timeFinish: Wed Dec 27 16:04:11 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-53
+  taskId: 57788949
+  timeCreate: Wed Dec 27 16:10:42 2023
+  timeStart: Wed Dec 27 16:11:01 2023
+  timeFinish: Wed Dec 27 16:13:58 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
