--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7396,3 +7396,30 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.12-12
+  taskId: 57789591
+  timeCreate: Thu Dec 28 00:26:33 2023
+  timeStart: Thu Dec 28 00:27:00 2023
+  timeFinish: Thu Dec 28 00:52:55 2023
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 26 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-11
+  taskId: 57789661
+  timeCreate: Thu Dec 28 00:42:20 2023
+  timeStart: Thu Dec 28 00:42:28 2023
+  timeFinish: Thu Dec 28 00:51:21 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-55
+  taskId: 57789779
+  timeCreate: Thu Dec 28 01:03:57 2023
+  timeStart: Thu Dec 28 01:04:35 2023
+  timeFinish: Thu Dec 28 01:07:59 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
