--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7495,3 +7495,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.12-7
+  taskId: 57800200
+  timeCreate: Sun Dec 31 03:49:54 2023
+  timeStart: Sun Dec 31 03:50:12 2023
+  timeFinish: Sun Dec 31 04:17:35 2023
+  timeWait: 0 mins
+  timeBuild: 27 mins
+  timeTotal: 27 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.12-7
+  taskId: 57800292
+  timeCreate: Sun Dec 31 04:01:00 2023
+  timeStart: Sun Dec 31 04:01:12 2023
+  timeFinish: Sun Dec 31 04:27:01 2023
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 26 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-60
+  taskId: 57803035
+  timeCreate: Mon Jan 1 02:11:06 2024
+  timeStart: Mon Jan 1 02:11:15 2024
+  timeFinish: Mon Jan 1 02:14:22 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
