--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7540,3 +7540,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-32
+  taskId: 57825001
+  timeCreate: Tue Jan 2 22:24:42 2024
+  timeStart: Tue Jan 2 22:24:54 2024
+  timeFinish: Tue Jan 2 22:33:32 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-62
+  taskId: 57825061
+  timeCreate: Tue Jan 2 22:39:27 2024
+  timeStart: Tue Jan 2 22:39:44 2024
+  timeFinish: Tue Jan 2 22:43:30 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
