--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -7702,3 +7702,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-36
+  taskId: 57866112
+  timeCreate: Thu Jan 4 22:23:29 2024
+  timeStart: Thu Jan 4 22:23:50 2024
+  timeFinish: Thu Jan 4 22:33:39 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-70
+  taskId: 57866250
+  timeCreate: Thu Jan 4 22:39:44 2024
+  timeStart: Thu Jan 4 22:41:12 2024
+  timeFinish: Thu Jan 4 22:45:12 2024
+  timeWait: 1 mins
+  timeBuild: 4 mins
+  timeTotal: 5 mins
