--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6460,3 +6460,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.11-12
+  taskId: 57930819
+  timeCreate: Tue Jan 9 03:40:38 2024
+  timeStart: Tue Jan 9 03:40:45 2024
+  timeFinish: Tue Jan 9 04:14:24 2024
+  timeWait: 0 mins
+  timeBuild: 33 mins
+  timeTotal: 33 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-46
+  taskId: 57930893
+  timeCreate: Tue Jan 9 03:48:42 2024
+  timeStart: Tue Jan 9 03:48:54 2024
+  timeFinish: Tue Jan 9 03:58:26 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-168
+  taskId: 57931927
+  timeCreate: Tue Jan 9 04:23:55 2024
+  timeStart: Tue Jan 9 04:23:56 2024
+  timeFinish: Tue Jan 9 04:27:16 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
