--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6487,3 +6487,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-47
+  taskId: 57933344
+  timeCreate: Tue Jan 9 10:08:29 2024
+  timeStart: Tue Jan 9 10:09:08 2024
+  timeFinish: Tue Jan 9 10:18:51 2024
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-169
+  taskId: 57934990
+  timeCreate: Tue Jan 9 10:46:31 2024
+  timeStart: Tue Jan 9 10:47:04 2024
+  timeFinish: Tue Jan 9 10:50:48 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
